# data-access-template

./: .gitignore  BEST-PRACTICES.md  README.md  db_params.yaml  environment.yml  pyproject.toml
src/: common_basis.R  common_basis.py
src/example_user/: example_analysis.Rmd  example_analysis.ipynb  example_analysis.nb.html
