[project]
name = "data-access-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "PyMySQL>=1.1.1",
    "hereutil>=0.1.5",
    "keyring>=25.5.0",
    "jupytext>=1.16.4",
    "jupyterlab>=4.3.1",
    "SQLAlchemy>=2.0.36",
    "plotnine>=0.14.1",
    "google-api-python-client>=2.153.0",
]
